@@ -1,5 +1,11 @@
 2007-01-05  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpbrushselectbutton.c: reverted the change for bug
+	#356901 and instead applied a patch from Kyoichiro Suda that's
+	actually a better fix and also plugs a memleak (see bug #393158).
+
+2007-01-05  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/bmp/bmpread.c (ReadImage): applied patch from Aurimas
 	Juška. Use the alpha channel if and only if a bitmap contains at
 	least one non-zero value. Fixes bug #352262.
